# PlasmaWallpaperAnimatedImage

./: .gitignore  CMakeLists.txt  README.txt  Wallpaper.cpp  Wallpaper.hpp  config.ui  plasma-wallpaper-animatedimage.desktop  restartdesktop  restartdesktop.sh
